--- a/app/src/main/res/drawable/roundedbutton.xml
+++ b/app/src/main/res/drawable/roundedbutton.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#eeffffff" />
-    <corners
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp" />
+    android:shape="oval">
+
+    <solid
+
+        android:color="#8fcea8" />
+
+    <size
+        android:width="25dp"
+        android:height="25dp" />
+    <!--  <padding
+          android:left="20dp"
+          android:right="20dp"
+          android:top="6dp"
+          android:bottom="6dp"/>
+
+      <corners
+          android:bottomLeftRadius="50dp"
+          android:topLeftRadius="50dp"
+          android:topRightRadius="50dp"
+          android:bottomRightRadius="50dp"/>-->
+
 </shape>
