--- a/app/src/main/res/drawable/roundedbutton.xml
+++ b/app/src/main/res/drawable/roundedbutton.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+    android:shape="rectangle">
 
     <solid
 
-        android:color="#8fcea8" />
+        android:color="@android:color/white" />
 
-    <size
-        android:width="25dp"
-        android:height="25dp" />
+    <corners android:radius="15dp" />
+
+
     <!--  <padding
           android:left="20dp"
           android:right="20dp"
