--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,67 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <sdk.adenda.widget.AdendaButton xmlns:adenda="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/lock_in_button"
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        adenda:confirm_opt_in="false"
-        adenda:confirm_opt_out="false"
-        adenda:opt_in_text="Enable Lock screen"
-        adenda:opt_out_text="Disable Lock screen" />
+        android:layout_height="0dp"
+        android:layout_weight="0.15"
+        android:text="@string/NumberEntry"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <Button
-        android:id="@+id/ContactButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1.25"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:ems="10"
+            android:hint="@string/RecipientNumber"
+            android:inputType="number" />
+
+        <Button
+            android:id="@+id/ContactButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/Contacts" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/lock_in_button"
-        android:layout_toEndOf="@+id/lock_in_button"
-        android:layout_toRightOf="@+id/lock_in_button"
-        android:text="New Button" />
-</RelativeLayout>
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <sdk.adenda.widget.AdendaButton xmlns:adenda="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/lock_in_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="114dp"
+            android:layout_marginRight="114dp"
+            android:layout_weight="0.15"
+            android:text="@string/EnableApp"
+            android:textSize="25sp"
+            adenda:confirm_opt_in="false"
+            adenda:confirm_opt_out="false"
+            adenda:opt_in_text="Enable Lock screen"
+            adenda:opt_out_text="Disable Lock screen" />
+    </LinearLayout>
+
+</LinearLayout>
