--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -13,7 +15,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="0.15"
+        android:layout_weight="0.2"
         android:text="@string/NumberEntry"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -29,7 +31,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:clickable="true"
+            android:editable="false"
             android:ems="10"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:hint="@string/RecipientNumber"
             android:inputType="number" />
 
@@ -46,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
+        android:layout_weight="1.2"
         android:orientation="horizontal">
 
         <sdk.adenda.widget.AdendaButton xmlns:adenda="http://schemas.android.com/apk/res-auto"
@@ -56,12 +62,12 @@
             android:layout_marginEnd="114dp"
             android:layout_marginRight="114dp"
             android:layout_weight="0.15"
-            android:text="@string/EnableApp"
-            android:textSize="25sp"
+            android:enabled="false"
+            android:textSize="20sp"
             adenda:confirm_opt_in="false"
             adenda:confirm_opt_out="false"
-            adenda:opt_in_text="Enable Lock screen"
-            adenda:opt_out_text="Disable Lock screen" />
+            adenda:opt_in_text="@string/EnableApp"
+            adenda:opt_out_text="@string/DisableApp" />
     </LinearLayout>
 
 </LinearLayout>
