--- a/app/src/main/res/layout-ldrtl/activity_main.xml
+++ b/app/src/main/res/layout-ldrtl/activity_main.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/Contacts"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/black" />
 
         <EditText
@@ -62,14 +62,13 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/aboutButton"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/aboutUsButton"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@android:color/black"
-            android:textDirection="rtl" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/black" />
 
         <sdk.adenda.widget.AdendaButton xmlns:adenda="http://schemas.android.com/apk/res-auto"
             android:id="@+id/lock_in_button"
@@ -80,8 +79,7 @@
             android:enabled="false"
             android:gravity="center_horizontal"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@android:color/black"
-            android:textDirection="rtl"
+            android:theme="@style/Base.V21.Theme.AppCompat.Light"
             adenda:confirm_opt_in="false"
             adenda:confirm_opt_out="false"
             adenda:opt_in_text="@string/EnableApp"
